# $Id$
# $Author$
# $Date$

November 24, 2014 Alex Olivas  (olivas@icecube.umd.edu)
--------------------------------------------------------------------
Release V04-00-04

* Builds without OpenGL and with Intel i7.
* Newer, tighter safeprimes.
* Switch to default value of numberOfPhotonsAtMaxBrightness.
* Incorporate hybrid mode between GEANT4 and parametrization.
* Get all devices, even those that are neither CPUs nor GPUs, like the Xeon Phi.

July 11, 2014 Claudio Kopper  (ckopper@icecube.wisc.edu)
--------------------------------------------------------------------
trunk (some of these happened in earlier releases but this file has not been updated)

* some code cleanup: removed the dataclasses header backports
  -> this version will not work with outdated dataclasses
* minor OpenCL cleanups to make some implementations happy
* safeprimes file will now be taken from I3_DATA if it exists
* added a benchmark script which can be used to check the GPU/CPU
  performance by propagating a couple of photons
* more cleanups to move from I3MCPulse to I3MCPE
* fixed a bug where the MCTree chopping would ignore secondary losses
  leading to light from muon stochastic losses to be ignored
  when looking at data pre-processed with CMC

January 29, 2013 Claudio Kopper  (ckopper@icecube.wisc.edu)
--------------------------------------------------------------------
Release V00-03-00

* support for ice tilt and anisotropy
* tuned when running on AMD cards (Radeon 7970 on cobaltamdgpu)

June 14, 2012 Claudio Kopper  (ckopper@icecube.wisc.edu)
--------------------------------------------------------------------
Release V00-02-01

* replaces the OpenCL 1.1 version of the cl.hpp OpenCL C++ bindings
  with the 1.2 version. This currently breaks compatibility with
  some older OpenCL 1.0 implementations (notably Mac OS X 10.6 Snow Leopard),
  but allows clsim to be compiled with newer versions of the AMD APP SDK.

May 31, 2012 Claudio Kopper  (ckopper@icecube.wisc.edu)